opam-version: "2.0"
synopsis: "Melange-express"
maintainer: ["Qwick Qwackers"]
authors: ["The Bilge Rats"]
license: "MIT"
homepage: "No I Refuse"
bug-reports: "JFC just use chortcut"
depends: [
  "dune" {>= "3.8"}
  "ocaml" {>= "5.1.1"}
  "reason" {>= "3.8.2" & < "4.0.0"}
  "melange-json"
  "melange"
  "odoc" {with-doc}
]
depexts: [
  ["express"] {npm-version = "^14.16.3"}
  ["body-parser"] {npm-version = "^1.18.3"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
